tests/neg/arrays/arr-17a.ts



/*@ where :: ( ) => { IArray<number> | (len v) = 5 } */
function where( ) {
	let result = new Array<number>(20);
	return result;
}
